// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubForm /> should render sub form with description 1`] = `
Array [
  <SubForm
    description="Bar"
    fields={Array []}
  />,
  " ",
]
`;

exports[`<SubForm /> should render sub form with title 1`] = `
Array [
  <SubForm
    fields={Array []}
    title="Foo"
  />,
  " ",
]
`;

exports[`<SubForm /> should render sub form with title and description 1`] = `
<SubForm
  description="Bar"
  fields={Array []}
  title="Foo"
/>
`;
